# nomadz-code-release

./: .clang-format  .clang-tidy  .format-all.sh  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.NaoDevils.txt  LICENSE.txt  README.md  colcon.pkg  package.xml
Src/Apps/SimRobot/: CMakeLists.txt  README.md
Src/Apps/URC/: CMakeLists.txt  MofCompiler.cpp  UniversalResourceCompiler.cpp
Src/Apps/bush/: CMakeLists.txt  Initializer.cpp  Initializer.h  README.md  Session.cpp  Session.h  bush.cpp
Src/Apps/naobridge/: CMakeLists.txt
Src/Apps/rf/: .gitignore  CMakeLists.txt  readme.md  rf.cpp  rf.h
Src/Apps/xboxJoystick/: CMakeLists.txt  xboxJoystick.cpp
Src/Controller/: BHToolBar.cpp  BHToolBar.h  CMakeLists.txt  CameraCalibratorHandler.cpp  CameraCalibratorHandler.h  ConsoleRoboCupCtrl.cpp  ConsoleRoboCupCtrl.h  ControllerRobot.cpp  ControllerRobot.h  GameController.cpp  GameController.h  ImageViewAdapter.cpp  ImageViewAdapter.h  LocalRobot.cpp  LocalRobot.h  LogPlayer.cpp  LogPlayer.h  Oracle.cpp  Oracle.h  RemoteRobot.cpp  RemoteRobot.h  RoboCupCtrl.cpp  RoboCupCtrl.h  RobotConsole.cpp  RobotConsole.h  TeamComm3DCtrl.cpp  TeamComm3DCtrl.h  TeamRobot.cpp  TeamRobot.h
Src/Controller/Platform/: Joystick.h
Src/Controller/Representations/: Annotation.cpp  Annotation.h  Dataset.cpp  Dataset.h  Group.cpp  Group.h  Lesson.cpp  Lesson.h  ModuleInfo.cpp  ModuleInfo.h  TimeInfo.cpp  TimeInfo.h
Src/Controller/Views/: CABSLGraphView.cpp  CABSLGraphView.h  ColorReferenceView.cpp  ColorReferenceView.h  ColorSpaceView.cpp  ColorSpaceView.h  ConsoleView.cpp  ConsoleView.h  DotView.cpp  DotView.h  FieldView.cpp  FieldView.h  FootView.cpp  FootView.h  ImageView.cpp  ImageView.h  JointView.cpp  JointView.h  ModuleGraphView.cpp  ModuleGraphView.h  PlotView.cpp  PlotView.h  SensorView.cpp  SensorView.h  StateMachineBehaviorView.cpp  StateMachineBehaviorView.h  TeamComm3DView.cpp  TeamComm3DView.h  VideoView.cpp  VideoView.h  View3D.cpp  View3D.h
Src/Controller/Visualization/: DebugDrawing.cpp  DebugDrawing.h  DebugDrawing3D.cpp  DebugDrawing3D.h  HeaderedWidget.cpp  HeaderedWidget.h  OpenGLMethods.cpp  OpenGLMethods.h  PaintMethods.cpp  PaintMethods.h  VideoPlayer.cpp  VideoPlayer.h
Src/Core/: CMakeLists.txt  ColorClasses.h  Enum.cpp  Enum.h  Function.h  Global.cpp  Global.h  Range.h  RangeNew.h  RingBuffer.h  RingBufferNew.h  RingBufferWithSum.h  RingBufferWithSumNew.h  SensorData.h  Settings.cpp  Settings.h
Src/Core/Communication/: RoboCupControlData.h
Src/Core/Debugging/: Asserts.h  DebugDataStreamer.cpp  DebugDataStreamer.h  DebugDataTable.cpp  DebugDataTable.h  DebugDrawings.cpp  DebugDrawings.h  DebugDrawings3D.h  DebugImages.h  DebugRequest.cpp  DebugRequest.h  Debugging.h  DrawingHelpers.h  Modify.h  QueueFillRequest.cpp  QueueFillRequest.h  Stopwatch.h  TcpConnection.cpp  TcpConnection.h  TimingManager.cpp  TimingManager.h  Watch.h
Src/Core/Math/: Angle.h  Approx.h  BHMath.h  Common.h  Constants.h  ConvexHull.h  Covariance.h  Eigen.h  EigenArrayExtensions.h  EigenMatrixBaseExtensions.h  GaussianDistribution.cpp  GaussianDistribution.h  GaussianDistribution2D.cpp  GaussianDistribution2D.h  GaussianDistribution3D.cpp  GaussianDistribution3D.h  GaussianTable.h  Kalman.h  MVTools.cpp  MVTools.h  Matrix.cpp  Matrix.h  Matrix2x2.h  Matrix3x3.h  Pose2D.cpp  Pose2D.h  Pose3D.h  Probabilistics.h  Random.h  Rotation.h  RotationMatrix.cpp  RotationMatrix.h  SpatialInertia.h  SpatialInertiaDerivative.h  SpatialTransform.h  SpatialVector.h  Vector.h  Vector2.h  Vector3.h  YaMatrix.h
Src/Core/MessageQueue/: InMessage.cpp  InMessage.h  MessageIDs.h  MessageQueue.cpp  MessageQueue.h  MessageQueueBase.cpp  MessageQueueBase.h  OutMessage.cpp  OutMessage.h
Src/Core/Module/: Blackboard.cpp  Blackboard.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  ModulePackage.h  ROSModuleHelpers.h  ROSModuleHelpers.tpp
Src/Core/ProcessFramework/: PlatformProcess.h  Process.cpp  Process.h  ProcessFramework.cpp  ProcessFramework.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  TeamHandler.cpp  TeamHandler.h
Src/Core/Streams/: AutoStreamable.h  Eigen.h  EnumIndexedArray.h  FieldWrapper.h  InOut.cpp  InOut.h  InStreams.cpp  InStreams.h  OutStreams.cpp  OutStreams.h  SimpleMap.cpp  SimpleMap.h  StreamHandler.cpp  StreamHandler.h  Streamable.cpp  Streamable.h  StreamableHelper.h
Src/Core/System/: AlignedMemory.cpp  AlignedMemory.h  BHAssert.cpp  BHAssert.h  DebugHandler.cpp  DebugHandler.h  Directory.cpp  Directory.h  File.cpp  File.h  Function.h  Semaphore.cpp  Semaphore.h  SharedMemory.cpp  SharedMemory.h  SoundPlayer.cpp  SoundPlayer.h  SystemCall.cpp  SystemCall.h  TcpComm.cpp  TcpComm.h  Thread.h  Time.cpp  Time.h  UdpComm.cpp  UdpComm.h
Src/Modules/: CMakeLists.txt
Src/Modules/BehaviorControl/: BehaviorControl.cpp  BehaviorControl.h  Cabsl.h  Libraries.cpp  Libraries.h  LibraryBase.cpp  LibraryBase.h  Options.h
Src/Modules/Configuration/: CameraCalibratorV4.cpp  CameraCalibratorV4.h  CameraSettingsRandomizer.cpp  CameraSettingsRandomizer.h  CognitionConfigurationDataProvider.cpp  CognitionConfigurationDataProvider.h  FrictionLearner.cpp  FrictionLearner.h  JointCalibrator.cpp  JointCalibrator.h  MotionConfigurationDataProvider.cpp  MotionConfigurationDataProvider.h
Src/Modules/Infrastructure/: AudioAcquisitionProvider.cpp  AudioAcquisitionProvider.h  AudioProvider.cpp  AudioProvider.h  CameraProvider.cpp  CameraProvider.h  CognitionLogDataProvider.cpp  CognitionLogDataProvider.h  FakeCamera.cpp  FakeCamera.h  GameInfoProvider.cpp  GameInfoProvider.h  InertiaSensorProvider.cpp  InertiaSensorProvider.h  LogDataProvider.h  MotionLogDataProvider.cpp  MotionLogDataProvider.h  MotionRobotHealthProvider.cpp  MotionRobotHealthProvider.h  NaoProvider.cpp  NaoProvider.h  RobotHealthProvider.cpp  RobotHealthProvider.h  TeamDataProvider.cpp  TeamDataProvider.h  (+4 more)
Src/SPL/: CMakeLists.txt  RoboCupGameControlData.h  SPLStandardMessage.h  VisualRefereeChallenge.h
Util/: CMakeLists.txt
Util/fftw-3.3/: fftw3.h
Util/libmfcc/: README.md
Util/vectorclass/: vectori128.h  vectori256.h
(+1421 files in other folders)
