<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nomadz_legacy</name>
  <version>1.0.0</version>
  <description>Legacy codebase for NomadZ SPL team</description>
  <maintainer email="nomadz@ethz.ch">NomadZ Team</maintainer>
  <license>CLOSED</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nomadz_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
